# AutoResearchUI

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dashboard.tsx  LICENSE  ProjectConfig.ts  README.md  app_backend.py  autoresearchui_cli.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: globals.css  layout.tsx
types/: react-diff-viewer.d.ts
